--- a/blocks/page.css
+++ b/blocks/page.css
@@ -11,7 +11,7 @@ body {
   flex-direction: column;
 }
 .page {
-  font-family: "inter", arial, sans-serif;
+  font-family: "Inter", "Inter italic" arial, sans-serif;
   background-color: #2a2c2f;
   color: #fff;
   line-height: 1.5;
