--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,43 +1,12 @@
-html,
 body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  border: none;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
+  background-color: #2a2c2f;
 }
 .page {
-  font-family: "Inter", "Inter italic" arial, sans-serif;
-  background-color: #2a2c2f;
+  font-family: "Inter-Regular", sans-serif;
   color: #fff;
-  line-height: 1.5;
-  font-size: 1rem;
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 5%;
-  position: relative;
-}
-@media screen and (max-width: 1280px) {
-  line-height: 1.5;
-  margin: 0;
-}
-@media screen and (max-width: 768px) {
-  .page {
-    max-width: 100%;
-    margin: 0;
-    padding: 0;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .page {
-    max-width: 100%;
-    margin: 0;
-    padding: 0;
-    border: 0;
-  }
+  background-color: #2a2c2f;
+  line-height: 20px;
+  font-size: 16px;
+  margin: auto;
+  width: 100%;
 }
