--- a/blocks/header.css
+++ b/blocks/header.css
@@ -73,3 +73,11 @@
     max-width: 290px;
   }
 }
+@media screen and (min-width: 1024px) and (max-width: 1280px0) {
+  .header__title {
+    max-width: 530px;
+    font-size: 75px;
+    line-height: 1;
+    height: 100%;
+  }
+}
