--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,7 +2,7 @@ body {
   background-color: #2a2c2f;
 }
 .page {
-  font-family: "Inter-Regular", sans-serif;
+  font-family: "Inter", "Inter italic" arial, sans-serif;
   color: #fff;
   background-color: #2a2c2f;
   line-height: 20px;
